Fix: sizes of images and background contrast in why-important section to improve accesability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,7 +542,7 @@ main {
 
 #why-important {
     text-align: center;
-    background-color: rgba(19, 124, 124, 0.7);
+    background-color: #265255;
     color: #ffffff;
     padding: 20px;
     width: 100%;
